<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Shopping Assist</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="recentStr">Recent</string>
    <string name="nearbyStr">Nearby</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saved">Saved</string>
    <string name="shop_assist">Shop Assist</string>
    <string name="conditionText">By clicking Sign Up, you agree to our Terms, Data Policy and Cookies Policy.</string>
</resources>